refactor: changes about 3 tier architech
