# src/main/java/com/grandvista/backend/presentation/dto/LoginRequest.java
@@ -1,0 +1,22 @@
+package com.grandvista.backend.presentation.dto;
+
+public class LoginRequest {
+    private String email;
+    private String password;
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+}
