# src/main/java/com/grandvista/backend/presentation/dto/RegisterRequest.java
@@ -1,0 +1,31 @@
+package com.grandvista.backend.presentation.dto;
+
+public class RegisterRequest {
+    private String email;
+    private String fullName;
+    private String role;
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getFullName() {
+        return fullName;
+    }
+
+    public void setFullName(String fullName) {
+        this.fullName = fullName;
+    }
+
+    public String getRole() {
+        return role;
+    }
+
+    public void setRole(String role) {
+        this.role = role;
+    }
+}
