# src/main/java/com/grandvista/backend/presentation/dto/ResetPasswordRequest.java
@@ -1,0 +1,13 @@
+package com.grandvista.backend.presentation.dto;
+
+public class ResetPasswordRequest {
+    private String email;
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+}
